# markovsim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Executables/: CMakeLists.txt  markovsim.cpp  sfm-latency.cpp  sfm-provisioning.cpp  sfm.cpp
Experiments/: .gitignore
Experiments/000_Initial/: print.sh  run.sh
Experiments/000_Single_vs_dual/: analyze.sh  print.sh  run.sh
Experiments/000_Single_vs_dual/graphs/: plotall.sh  single-vs-dual-dist.plt  single-vs-dual-q95.plt
Experiments/001_Var_chi/: print.sh  run.sh
Experiments/002_Var_chi-2/: analyze.sh  run.sh  single.sh
Experiments/003_Var_chi-3/: analyze.sh  run.sh
Experiments/003_Var_chi-3/graphs/: var-chi-q0.95.plt  var-chi-q050.plt  var-chi-q095.plt  var_chi-q0.5.plt
Experiments/004_Var_chi_absorbing/: analyze.sh  run.sh
Experiments/004_Var_chi_absorbing/graphs/: var-chi-absorbing.plt
Experiments/005_Single_vs_dual-2/: run.sh
Experiments/005_Single_vs_dual-2/graphs/: dist-var-chi.plt
Markov/: CMakeLists.txt  mmc.cpp  mmc.h
Scripts/: main.py  steadystate.py  test_steadystate.py
Serverless/: configuration.py  example.py  serverless.py  steadystate.py  test_steadystate.py
Test/: CMakeLists.txt  testmarkov.cpp
jenkins/: cppcheck.sh
simulations/000_StatefulFaaS/: .gitignore  README.md  run-latency.sh  run-provisioning.sh  run.sh
simulations/000_StatefulFaaS/graphs/: latency.plt  provisioning-multi.plt  provisioning.plt
